<resources>
    <string name="app_name">دارنا</string>
    <string name="attention">Attention</string>
    <string name="something_wrong">Something wrong happened!</string>
    <string name="update">There is a new update in the store, update please</string>
    <string name="edit">Sorry, the application is closed for maintenance</string>
    <string name="ok">OK</string>
    <string name="login">Login</string>
    <string name="mobile_num">Mobile Number</string>
    <string name="activation_code">Activation Code</string>
    <string name="terms_agree"><u>Agree To The Terms Of Use</u></string>
    <string name="login_faild">Login Error</string>
    <string name="empty_fields">Please fill in the blank fields</string>
    <string name="wrong_phone">Please enter valid phone number</string>
    <string name="terms_approved">Terms of use must be approved</string>
    <string name="wrong_code">Wrong code</string>
    <string name="activation">Activation</string>
    <string name="activation_btn">Activation</string>
    <string name="activation_message">Enter the sent activation code</string>
    <string name="resend_code"><u>Resend the code</u></string>
    <string name="resend_message">A new activation code has been sent back to your phone number</string>
    <string name="register">Register</string>
    <string name="register_btn">Register New Account</string>
    <string name="your_name">Your Name</string>
    <string name="the_name">The Name</string>
    <string name="store_name">Store Name</string>
    <string name="company_name">Company Name</string>
    <string name="email">Email</string>
    <string name="category">Category</string>
    <string name="address">Address</string>
    <string name="main_address">Main Branch Location</string>
    <string name="location">Location</string>
    <string name="save">Save</string>
    <string name="pick_location">Pick Location Please</string>
    <string name="my_store">My Store</string>
    <string name="store_status">Store Status</string>
    <string name="open">Open</string>
    <string name="busy">Busy</string>
    <string name="branch_status">Branch Status</string>
    <string name="store_participation">My Participation</string>
    <string name="store_participation_complete">days left</string>
    <string name="add_product">Add Product</string>
    <string name="our_product">Our Products</string>
    <string name="edit_store">Edit Store</string>
    <string name="orders">Incoming Orders</string>
    <string name="order">Order</string>
    <string name="reports">Reports</string>
    <string name="branch">Branch</string>
    <string name="branches">Branches</string>
    <string name="delivery_company">Delivery Company</string>
    <string name="coverage_areas">Coverage Areas</string>
    <string name="edit_account">Edit Account</string>
    <string name="drivers">Drivers</string>
    <string name="driver">Driver</string>
    <string name="app_language">App Language</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="use_policy">Usage Policy</string>
    <string name="terms">Terms and Conditions</string>
    <string name="call_us">Call Us</string>
    <string name="log_out">Logout</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="pick_lang">Pick Your Language</string>
    <string name="write_report">Enter Your Message</string>
    <string name="send">Send</string>
    <string name="send_result">Your Message has Sent Successfully</string>
    <string name="mobile">Mobile</string>
    <string name="add_branch">Add New Branch</string>
    <string name="no_branch">There is no branches for your company</string>
    <string name="delete_result">Branch has deleted successfully</string>
    <string name="add_result">Item has added successfully</string>
    <string name="city">City</string>
    <string name="region">Region</string>
    <string name="about">About you</string>
    <string name="internal_categories">Internal Categories</string>
    <string name="work_hours">Work Hours</string>
    <string name="work_days">Work Days</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="duration">Duration : </string>
    <string name="minute">M</string>
    <string name="dinar">KWD</string>
    <string name="product_name">Product Name</string>
    <string name="quantity_type">Quantity Type</string>
    <string name="daily">Daily</string>
    <string name="fixed">Fixed</string>
    <string name="quantity">Quantity</string>
    <string name="internal_category">Internal Category</string>
    <string name="price">Price</string>
    <string name="processing_time">Processing Time</string>
    <string name="product_description">Product Description</string>
    <string name="quantity_expired">Quantity Expired</string>
    <string name="add_filter">Add Filter</string>
    <string name="add_option">Add Option</string>
    <string name="publish_product">Publish Product</string>
    <string name="multiple_choice">Multiple Choice</string>
    <string name="permissible">Permissible</string>
    <string name="forbidden">Forbidden</string>
    <string name="arabic_title">Arabic Title</string>
    <string name="english_title">English Title</string>
    <string name="option_arabic_title">Option Arabic Title</string>
    <string name="option_english_title">Option English Title</string>
    <string name="done_successfully">Done Successfully</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="two_days">After Two Days</string>
    <string name="three_days">After Three Days</string>
    <string name="order_no">Order No.</string>
    <string name="status">Status</string>
    <string name="cost">Cost</string>
    <string name="empty_order">There is no orders for you</string>
    <string name="receipt_request">Receipt The Request</string>
    <string name="rejection_request">Rejection The Request</string>
    <string name="complete_orders">Complete Orders</string>
    <string name="canceled_orders">Canceled Orders</string>
    <string name="refused_orders">Refused Orders</string>
    <string name="empty_reports">There is no reports for you</string>
    <string name="add_location">Add Location</string>
    <string name="add_driver">Add Driver</string>
    <string name="empty_locations">There is no locations</string>
    <string name="empty_drivers">There is no drivers</string>
    <string name="starting_location">Starting Location</string>
    <string name="restaurant_location">Restaurant Location</string>
    <string name="customer_location">Customer Location</string>
    <string name="receive_time">Required receive time</string>
    <string name="delivery_time">Required delivery time</string>
    <string name="select">Selection</string>
    <string name="driver_name">Driver Name</string>
    <string name="finish_time">Finish Time</string>
    <string name="place">Place</string>
    <string name="transfer_the_order">Transfer The Order</string>
    <string name="no_assign">Assign the order to any driver !!</string>
    <string name="delivery_received">Delivery received</string>
    <string name="delivered">Delivered</string>
</resources>