<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingEnd="24dp"
        android:paddingStart="24dp">

        <TextView
            android:id="@+id/tvTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/store_status"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/rgStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitles">

            <RadioButton
                android:id="@+id/rbOpen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="4dp"
                android:text="@string/open"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:buttonTint="@color/colorPrimary" />

            <RadioButton
                android:id="@+id/rbBusy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:padding="4dp"
                android:text="@string/busy"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:buttonTint="@color/colorPrimary" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnChangeStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rgStatus" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>