<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="isFill"
            type="Boolean" />
        <import type="android.view.View"/>
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingStart="24dp"
            android:paddingEnd="24dp">

            <TextView
                android:id="@+id/tvTitles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/add_filter"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/layoutLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/tvTitles">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_edit_text"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/multiple_choice"
                        android:textColor="@color/colorText"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <RadioButton
                            android:id="@+id/rbPermissible"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/permissible"
                            android:checked="true"
                            android:textColor="@color/colorText"
                            android:textSize="14sp" />

                        <RadioButton
                            android:id="@+id/rbForbidden"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/forbidden"
                            android:textColor="@color/colorText"
                            android:textSize="14sp" />
                    </RadioGroup>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_edit_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextFilterArabicTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:ems="24"
                        android:hint="@string/arabic_title"
                        android:inputType="textPersonName"
                        android:lines="1"
                        android:maxLines="1"
                        android:textColor="@color/colorText"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_edit_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextFilterEnglishTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:ems="24"
                        android:hint="@string/english_title"
                        android:inputType="textPersonName"
                        android:lines="1"
                        android:maxLines="1"
                        android:textColor="@color/colorText"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_edit_text"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <EditText
                        android:id="@+id/editOptionArabicTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:ems="24"
                        android:hint="@string/option_arabic_title"
                        android:inputType="textPersonName"
                        android:lines="1"
                        android:maxLines="1"
                        android:textColor="@color/colorText"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/editOptionEnglishTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="@android:color/transparent"
                        android:ems="24"
                        android:hint="@string/option_english_title"
                        android:inputType="textPersonName"
                        android:lines="1"
                        android:maxLines="1"
                        android:textColor="@color/colorText"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/editOptionPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/price"
                        android:inputType="numberDecimal"
                        android:lines="1"
                        android:maxLines="1"
                        android:textColor="@color/colorText"
                        android:textSize="14sp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnAddOption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:backgroundTint="@color/white"
                        android:drawableEnd="@drawable/ic_add"
                        android:text="@string/add"
                        android:textAllCaps="false"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcOptions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{isFill ? View.VISIBLE : View.GONE, default = gone}"
                    tools:listitem="@layout/item_option"/>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/add_filter"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutLinear" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>