<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="todayFill"
            type="Boolean" />

        <variable
            name="tomorrowFill"
            type="Boolean" />

        <variable
            name="twoDayFill"
            type="Boolean" />

        <variable
            name="threeDayFill"
            type="Boolean" />

        <import type="android.view.View" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.fragments.storeManger.branch.BranchOrdersFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="0dp"
                app:cardElevation="16dp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clTool"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/imgBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_back"
                        app:tint="@color/colorPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/orders"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_order"
                    android:textColor="@color/colorText"
                    android:visibility="@{(todayFill || tomorrowFill || twoDayFill || threeDayFill) ? View.GONE : View.VISIBLE, default = gone}"
                    android:textSize="16sp"
                    android:layout_gravity="center" />

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_flag"
                    android:visibility="@{todayFill  ? View.VISIBLE : View.GONE, default = gone}"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="4dp"
                        android:text="@string/today"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="@{(todayFill || tomorrowFill || twoDayFill || threeDayFill) ? View.VISIBLE : View.GONE, default = gone}"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:ellipsize="end"
                        android:ems="20"
                        android:text="@string/order_no"
                        android:textAlignment="center"
                        android:textColor="@color/colorText"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:ellipsize="end"
                        android:ems="20"
                        android:text="@string/processing_time"
                        android:textAlignment="center"
                        android:textColor="@color/colorText"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:ellipsize="end"
                        android:ems="20"
                        android:text="@string/status"
                        android:textAlignment="center"
                        android:textColor="@color/colorText"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:ellipsize="end"
                        android:ems="20"
                        android:text="@string/cost"
                        android:textAlignment="center"
                        android:textColor="@color/colorText"
                        android:textSize="14sp" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcTodayOrders"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:visibility="@{todayFill  ? View.VISIBLE : View.GONE, default = gone}" />

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_flag"
                    android:visibility="@{tomorrowFill  ? View.VISIBLE : View.GONE, default = gone}"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="4dp"
                        android:text="@string/tomorrow"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcTomorrowOrders"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:visibility="@{tomorrowFill  ? View.VISIBLE : View.GONE, default = gone}" />

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_flag"
                    android:visibility="@{twoDayFill  ? View.VISIBLE : View.GONE, default = gone}"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="4dp"
                        android:text="@string/two_days"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcTwoDaysOrders"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:visibility="@{twoDayFill  ? View.VISIBLE : View.GONE, default = gone}" />

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/background_flag"
                    android:visibility="@{threeDayFill  ? View.VISIBLE : View.GONE, default = gone}"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="4dp"
                        android:text="@string/three_days"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcThreeDaysOrders"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:visibility="@{threeDayFill  ? View.VISIBLE : View.GONE, default = gone}" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>